Updated added friends page

--- a/client/src/css/Layout.css
+++ b/client/src/css/Layout.css
@@ -1,9 +1,24 @@
-/* Push content below navbar */
+/* Base layout styles */
 .layout-content {
   padding-top: 80px; /* navbar height */
-  padding-right: 330px; /* space for right sidebar */
   min-height: 100vh;
   box-sizing: border-box;
+  transition: padding-right 0.3s ease;
+}
+
+/* When sidebar is present */
+.layout-content.with-sidebar {
+  padding-right: 70px; /* Width of collapsed sidebar (avatar only) */
+}
+
+/* When sidebar is expanded */
+.layout-content.with-sidebar.sidebar-expanded {
+  padding-right: 330px; /* Width of expanded sidebar */
+}
+
+/* When sidebar is collapsed */
+.layout-content.with-sidebar.sidebar-collapsed {
+  padding-right: 70px;
 }
 
 /* Remove old sidebar rules */
